--- a/Catalog.API/appsettings.json
+++ b/Catalog.API/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DatabaseSettings": {
+    "ConnectionString": "mongodb://127.0.0.1:27017?readPreference=primary&ssl=false",
+    "DatabaseName": "CatalogDb",
+    "CollectionName": "Products",
+    "BrandsCollection": "Brands",
+    "TypesCollection": "Types"
+  },
+  "ElasticConfiguration": {
+    "Uri": "http://localhost:9200"
+  }
 }
